include_directories(..)

SET(SOURCES
    Assertions.cc
    Base64.cc
    DeprecatedString.cc
    FloatingPointStringConversions.cc
    FlyString.cc
    Format.cc
    FuzzyMatch.cc
    GenericLexer.cc
    Hex.cc
    JsonParser.cc
    JsonPath.cc
    JsonValue.cc
    kmalloc.cc
    LexicalPath.cc
    Random.cc
    StackInfo.cc
    String.cc
    StringBuilder.cc
    StringFloatingPointConversions.cc
    StringImpl.cc
    StringUtils.cc
    StringView.cc
    Time.cc
    URL.cc
    URLParser.cc
    Utf16View.cc
    Utf8View.cc
    UUID.cc
)

SET(HEADERS
    AllOf.h
    AnyOf.h
    ArbitrarySizedEnum.h
    Array.h
    Assertions.h
    Atomic.h
    AtomicRefCounted.h
    Badge.h
    Base64.h
    BinaryBufferWriter.h
    BinaryHeap.h
    BinarySearch.h
    BitCast.h
    BitStream.h
    Bitmap.h
    BitmapView.h
    Buffered.h
    BuiltinWrappers.h
    BumpAllocator.h
    ByteBuffer.h
    ByteReader.h
    CharacterTypes.h
    Checked.h
    CheckedFormatString.h
    CircularDeque.h
    CircularDuplexStream.h
    CircularQueue.h
    Complex.h
    Concepts.h
    DateConstants.h
    DateTimeLexer.h
    Debug.h
    Demangle.h
    DeprecatedString.h
    Diagnostics.h
    DisjointChunks.h
    DistinctNumeric.h
    DoublyLinkedList.h
    Endian.h
    EnumBits.h
    Error.h
    ExtraMathConstants.h
    FPControl.h
    FileStream.h
    Find.h
    FixedArray.h
    FixedPoint.h
    FloatingPoint.h
    FloatingPointStringConversions.h
    FlyString.h
    Format.h
    Forward.h
    Function.h
    FuzzyMatch.cc
    FuzzyMatch.h
    GenericLexer.h
    GenericShorthands.h
    HashFunctions.h
    HashMap.h
    HashTable.h
    Hex.h
    IDAllocator.h
    IPv4Address.h
    IPv6Address.h
    IntegralMath.h
    IntrusiveDetails.h
    IntrusiveList.h
    IntrusiveListRelaxedConst.h
    IntrusiveRedBlackTree.h
    IterationDecision.h
    Iterator.h
    JsonArray.h
    JsonArraySerializer.h
    JsonObject.h
    JsonObjectSerializer.h
    JsonParser.h
    JsonPath.cc
    JsonPath.h
    JsonValue.h
    LEB128.h
    LexicalPath.cc
    LexicalPath.h
    MACAddress.h
    Math.h
    MemMem.h
    Memory.h
    MemoryStream.h
    NeverDestroyed.h
    NoAllocationGuard.h
    Noncopyable.h
    NonnullOwnPtr.h
    NonnullOwnPtrVector.h
    NonnullPtrVector.h
    NonnullRefPtr.h
    NonnullRefPtrVector.h
    NumberFormat.h
    NumericLimits.h
    Optional.h
    OwnPtr.h
    Platform.h
    PrintfImplementation.h
    Ptr32.h
    Queue.h
    QuickSort.h
    Random.h
    RecursionDecision.h
    RedBlackTree.h
    RefCountForwarder.h
    RefCounted.h
    RefPtr.h
    Result.h
    ReverseIterator.h
    SIMD.h
    SIMDExtras.h
    SIMDMath.h
    ScopeGuard.h
    ScopeLogger.h
    ScopedValueRollback.h
    Singleton.h
    SinglyLinkedList.h
    SinglyLinkedListWithCount.h
    SourceGenerator.h
    SourceLocation.h
    Span.h
    Stack.h
    StackInfo.h
    Statistics.h
    StdLibExtraDetails.h
    StdLibExtras.h
    Stream.h
    String.h
    StringBuilder.h
    StringFloatingPointConversions.h
    StringHash.h
    StringImpl.h
    StringUtils.h
    StringView.h
    TemporaryChange.h
    Time.h
    Traits.h
    Trie.h
    Try.h
    Tuple.h
    TypeCasts.h
    TypeList.h
    TypedTransfer.h
    Types.h
    UBSanitizer.h
    UFixedBigInt.h
    URL.h
    URLParser.h
    UUID.h
    UnicodeUtils.h
    Userspace.h
    Utf16View.h
    Utf32View.h
    Utf8View.h
    Variant.h
    Vector.h
    WeakPtr.h
    Weakable.h
    kmalloc.h
    kstdio.h
        ../Common/LibEvent/EventLoop.cc ../Common/LibEvent/EventLoop.h ../Common/LibEvent/Timer.cc ../Common/LibEvent/Timer.h)

add_library(LibAK ${SOURCES} ${HEADERS})